// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageCarousel /> should render correctly when multiple images in image array prop 1`] = `
<Fragment>
  <div
    className="carousel__container"
  >
    <Carousel
      activeIndex={0}
      enableTouch={true}
      interval={5000}
      keyboard={true}
      next={[Function]}
      pause="hover"
      previous={[Function]}
      slide={true}
    >
      <CarouselIndicators
        activeIndex={0}
        className="carousel__indicators"
        items={
          Array [
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
              "region": "eu-west-2",
            },
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106247322-IMG_0088.JPG",
              "region": "eu-west-2",
            },
          ]
        }
        onClickHandler={[Function]}
      />
      <CarouselItem
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="0"
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        slide={true}
        tag="div"
        timeout={600}
        unmountOnExit={false}
      >
        <div
          className="update__image-container"
        >
          <S3Image
            imgKey="/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG"
            theme={
              Object {
                "photoImg": Object {
                  "width": "100%",
                },
              }
            }
          />
        </div>
      </CarouselItem>
      <CarouselItem
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="1"
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        slide={true}
        tag="div"
        timeout={600}
        unmountOnExit={false}
      >
        <div
          className="update__image-container"
        >
          <S3Image
            imgKey="/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106247322-IMG_0088.JPG"
            theme={
              Object {
                "photoImg": Object {
                  "width": "100%",
                },
              }
            }
          />
        </div>
      </CarouselItem>
      <CarouselControl
        direction="prev"
        directionText="Previous"
        onClickHandler={[Function]}
      />
      <CarouselControl
        direction="next"
        directionText="Next"
        onClickHandler={[Function]}
      />
    </Carousel>
  </div>
  <Blueprint3.Dialog
    canOutsideClickClose={true}
    icon="trash"
    isOpen={false}
    onClose={[Function]}
    title="Are you sure?"
  >
    <div
      className="update__alert-container"
    >
      <p
        className="text-center"
      >
        Are you sure you want to delete this image?
      </p>
      <p
        className="text-center"
      >
        Other images can be added at a later date.
      </p>
      <S3Image
        imgKey={null}
        theme={
          Object {
            "photoImg": Object {
              "marginBottom": "20px",
              "maxWidth": "100%",
            },
          }
        }
      />
      <div
        className="dialog__button-container"
      >
        <Blueprint3.Button
          intent="danger"
          onClick={[Function]}
          style={
            Object {
              "margin": "0 5px",
            }
          }
          text="Cancel"
        />
        <Blueprint3.Button
          intent="success"
          onClick={[Function]}
          style={
            Object {
              "margin": "0 5px",
            }
          }
          text="Confirm"
        />
      </div>
    </div>
  </Blueprint3.Dialog>
</Fragment>
`;

exports[`<ImageCarousel /> should render correctly when only one image is in image array prop 1`] = `
<Fragment>
  <div
    className="carousel__container"
  >
    <div
      className="update__image-container"
    >
      <S3Image
        imgKey="/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG"
        theme={
          Object {
            "photoImg": Object {
              "width": "100%",
            },
          }
        }
      />
    </div>
  </div>
  <Blueprint3.Dialog
    canOutsideClickClose={true}
    icon="trash"
    isOpen={false}
    onClose={[Function]}
    title="Are you sure?"
  >
    <div
      className="update__alert-container"
    >
      <p
        className="text-center"
      >
        Are you sure you want to delete this image?
      </p>
      <p
        className="text-center"
      >
        Other images can be added at a later date.
      </p>
      <S3Image
        imgKey={null}
        theme={
          Object {
            "photoImg": Object {
              "marginBottom": "20px",
              "maxWidth": "100%",
            },
          }
        }
      />
      <div
        className="dialog__button-container"
      >
        <Blueprint3.Button
          intent="danger"
          onClick={[Function]}
          style={
            Object {
              "margin": "0 5px",
            }
          }
          text="Cancel"
        />
        <Blueprint3.Button
          intent="success"
          onClick={[Function]}
          style={
            Object {
              "margin": "0 5px",
            }
          }
          text="Confirm"
        />
      </div>
    </div>
  </Blueprint3.Dialog>
</Fragment>
`;
